--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,13 +3,13 @@ html
   head
     meta(content="text/html; charset=UTF-8", http-equiv="Content-Type")
     title= title
+    link(rel="stylesheet", href="/stylesheets/normalizer.css")
     link(rel="stylesheet", href="/stylesheets/style.css")
   body
-
     nav
       ul
         li
-          a(href='home') b2c
+          a(href='home') chat
         li
-          a(href='query') b2b
+          a(href='query') query
     block content
