--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,24 +1,34 @@
-body{
-	margin: 0;
-	background-color: rgb(175,175,150);
-}
+
+/* -------------------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------- */
+/* MENU */
+/* -------------------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------- */
+
 nav{
-	/*background-color: rgb(10,10,160);*/
 	background-color: rgb(10,120,180);
+	border-bottom: 3px grey solid;
+	text-align: center;
+	padding: 5px 0;
 }
 nav li{
 	display: inline-block;
 	border: 1px solid grey;
-	padding: 2px 10px;
 	background-color: rgb(180,180,50);
 	margin-left: 15px;
-	font-size: 125%;
+	font-size: 200%;
+}
+nav a{
+	display: block;
+	padding: 2px 10px;
 }
 nav li:first-child{
 	margin-left: 0;
 }
 nav li:hover{
-	background-color: rgb(200,200,70);
+	background-color: rgb(190,190,60);
 }
 nav a{
 	text-decoration: none;
@@ -26,17 +36,52 @@ nav a{
 	text-transform: uppercase;
 }
 
-nav,header,section,footer,aside{
-	text-align: center;
-	padding: 10px 0;
+/* -------------------------------------------- */
+/* MENU MOBILE */
+/* -------------------------------------------- */
+
+@media screen and (max-aspect-ratio: 7/10), screen and (max-width: 500px) {
+	nav{
+		background-color: black;
+	}
 }
 
 
 
 
-.IN,.OUT{
+
+
+
+
+
+
+
+
+header,section,footer,aside{
+	text-align: center;
+	padding: 15px 0;
+}
+
+h1{
+	font-size: 300%;
+	padding: 25px 0;
+	margin: 0;
+	color: rgb(10,100,230);
+}
+
+
+aside{
+	border: 3px grey solid;
+	background-color: rgb(225,225,225);
+	width: 400px;
 	max-width: 50%;
-	box-shadow: 10px 10px 5px #b0b0b0;
+	margin: 15px auto;
+}
+
+.IN,.OUT{
+	width: 600px;
+	max-width: 60%;
+	box-shadow: 6px 3px 5px #b0b0b0;
 	margin: 5px auto;
 	padding: 5px 10px;
 	color: white;
@@ -59,19 +104,169 @@ nav,header,section,footer,aside{
 	color: white;
 	border-radius: 5px;
 	margin-top: 5px;
+	display: inline-block;
+	margin-top: 15px;
 }
 .btn:hover{
 	cursor: pointer;
+	background-color: rgb(85,85,85);
 }
 
 
 
+
+code{
+	background-color: rgb(15,15,15);
+	color: white;
+	display: inline-block;
+	text-align: left;
+	margin-top: 5px;
+	padding: 2px 4px;
+	border: 1px solid white;
+}
+
+textarea {
+	resize: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* -------------------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------- */
+/* PRESENTATION */
+/* -------------------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------- */
+
+#prez {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+#slides {
+    width: 100%;
+    height: 600%;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+#slides section{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:16.666%;
+	padding: 0;
+	margin: 0;
+}
+#slide-1 {
+    background: url('../images/slide1.jpg') no-repeat center center;
+    background-size: cover;
+}
+#slide-2 {
+    background: url('../images/slide2.png') no-repeat center center;
+    background-size: cover;
+    -webkit-transform: translate(0,100%);
+    -ms-transform: translate(0,100%);
+    transform: translate(0,100%);
+}
+#slide-3 {
+    background: url('../images/slide3.jpg') no-repeat center center;
+    background-size: cover;
+    -webkit-transform: translate(0,200%);
+    -ms-transform: translate(0,200%);
+    transform: translate(0,200%);
+}
+#slide-4 {
+    background: url('../images/slide4.jpg') no-repeat center center;
+    background-size: cover;
+    -webkit-transform: translate(0,300%);
+    -ms-transform: translate(0,300%);
+    transform: translate(0,300%);
+}
+#slide-5 {
+    background: url('../images/slide5.jpg') no-repeat center center;
+    background-size: cover;
+    -webkit-transform: translate(0,400%);
+    -ms-transform: translate(0,400%);
+    transform: translate(0,400%);
+}
+#slide-6 {
+    background: url('../images/slide6.jpeg') no-repeat center center;
+    background-size: cover;
+    -webkit-transform: translate(0,500%);
+    -ms-transform: translate(0,500%);
+    transform: translate(0,500%);
+}
+
+.caption {
+    position: absolute;
+    bottom: 25%;
+    right: 15%;
+    text-align: right;
+	font-size: 150%;
+}
+.caption h2 {
+	color: rgb(10,100,230);
+}
+.caption p{
+	color: white;
+}
+
+#slide-2 .caption, #slide-4 .caption, #slide-6 .caption{
+    top: 15%;
+    left: 15%;
+	text-align: left;
+}
+
+#helper {
+    position:absolute;
+    left:0;
+    top: 0;
+    height:600%;
+    width: 20px;
+}
+.marker {
+    height: 16.666%;
+    width: 100%;
+}
+
+a#tryit{
+	position: fixed;
+	top: 15px;
+	left: 15px;
+	z-index: 1000;
+	font-size: 150%;
+	padding: 3px;
+	color: white;
+	background-color: rgb(60,30,15);
+	border: 2px solid white;
+	text-decoration: none;
+}
+a#tryit:hover{
+	background-color: rgb(75,45,30);
+}
 
 /*
 ----------------------------------------------------------
 	GENERAL
 ----------------------------------------------------------
 */
+
+html, body {
+    width:100%;
+    height:100%;
+	background-color: rgb(175,175,150);
+}
 
 ul,li{
 	padding: 0;
@@ -81,3 +276,8 @@ ul,li{
 .bas{
 	clear: both;
 }
+
+
+
+
+
