--- a/views/about.jade
+++ b/views/about.jade
@@ -1,10 +1,40 @@
 extends layout
 
 block content
-  header
-    h1= title
-  section
-    h2 About
+  //header
+    //h1= title
+  div#prez
+    div#slides(data-0="transform:translate(0%,0%);",data-50p="",data-150p="transform:translate(0%,-16.666%);",data-200p="",data-300p="transform:translate(0%,-33.333%);",data-350p="",data-450p="transform:translate(0%,-50%);",data-500p="",data-600p="transform:translate(0%,-66.666%);",data-650p="",data-750p="transform:translate(0%,-83.333%);")
+      section#slide-1
+        div(class="caption",data-50p="opacity: 1; transform:translate(0px,0px);",data-100p="opacity: 0; transform:translate(0px,-100%);",data-anchor-target="#helper")
+          h1= title
+      section#slide-2
+        div(class="caption",data-100p="opacity: 0; transform:translate(0px,50%);",data-150p="opacity: 1; transform:translate(0px,0px);",data-200p="",data-250p="opacity: 0; transform:translate(100px,100px);",data-anchor-target="#helper")
+          h2= prez[0].title
+          p= prez[0].txt
+      section#slide-3
+        div(class="caption",data-250p="opacity: 0; transform:translate(0px,-150%);",data-300p="opacity: 1; transform:translate(0px,0px);",data-350p="",data-400p="opacity: 0; transform:translate(-100px,0%);",data-anchor-target="#helper")
+          h2= prez[1].title
+          p= prez[1].txt
+      section#slide-4
+        div(class="caption",data-400p="opacity: 0; transform:translate(50px,50%);",data-450p="opacity: 1; transform:translate(0px,0px);",data-500p="",data-550p="opacity: 0; transform:translate(100px,100px);",data-anchor-target="#helper")
+          h2= prez[2].title
+          p= prez[2].txt
+      section#slide-5
+        div(class="caption",data-550p="opacity: 0; transform:translate(0px,-150%);",data-600p="opacity: 1; transform:translate(0px,0px);",data-650p="",data-700p="opacity: 0; transform:translate(-100px,0%);",data-anchor-target="#helper")
+          h2= prez[3].title
+          p= prez[3].txt
+      section#slide-6
+        div(class="caption",data-700p="opacity: 0; transform:translate(50px,50%);",data-750p="opacity: 1; transform:translate(0px,0px);",data-anchor-target="#helper")
+          h2= prez[4].title
+          p= prez[4].txt
+  div#helper
+    div(class="marker")
+    div(class="marker")
+    div(class="marker")
+    div(class="marker")
   footer
-    span
-      a(href='/') Retour
+    a#tryit(href="home" title="Back to chat") Try it !
+  script(src='/javascripts/jquery.js')
+  script(src='/javascripts/skrollr.js')
+  script(src='/javascripts/about.js')
